manifests/app/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test-app
  namespace: default
spec:
  replicas: 2  # This will run on 2 pods (workers)
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: ghcr.io/sadokkhessairi/test-app:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: ghcr-creds
