manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sagemcom-backend
  namespace: default
spec:
  selector:
    app: sagemcom-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sagemcom-frontend
  namespace: default
spec:
  selector:
    app: sagemcom-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
